# charm-swift-storage

./: .coverage  .coveragerc  .gitignore  .gitreview  .project  .pydevproject  Makefile  README.md  TODO  actions.yaml  charm-helpers-hooks.yaml  charm-helpers-tests.yaml  charm-helpers.yaml  config.yaml  metadata.yaml  setup.cfg  tox.ini
actions/: actions.py  openstack_upgrade.py
hooks/: charmhelpers  install  misc_utils.py  storage.bootstrap  swift_storage_context.py  swift_storage_hooks.py  swift_storage_utils.py
lib/: misc_utils.py  swift_storage_context.py  swift_storage_utils.py
templates/: 001-baseconfig  050-swift-storage.conf  account-server-2.conf  account-server.conf  container-server-2.conf  container-server.conf  etc_swift_account-server_1.conf  etc_swift_account-server_2.conf  etc_swift_container-server_1.conf  etc_swift_container-server_2.conf  etc_swift_object-server_1.conf  etc_swift_object-server_2.conf  object-replicator-server.conf  object-server-1.conf  object-server.conf  rsyncd.conf  vaultlocker.conf.j2
tests/: 00-setup  010-basic-precise-essex  014-basic-precise-icehouse  015-basic-trusty-icehouse  016-basic-trusty-juno  017-basic-trusty-kilo  018-basic-trusty-liberty  018-basic-utopic-juno  019-basic-trusty-mitaka  019-basic-vivid-kilo  020-basic-trusty-liberty  020-basic-wily-liberty  021-basic-wily-liberty  021-basic-xenial-mitaka  10-basic-precise-essex  100-pause-resume-actions  11-basic-precise-folsom  12-basic-precise-grizzly  13-basic-precise-havana  15-basic-trusty-icehouse  README  basic_deployment.py  dev-basic-bionic-queens  (+15 more)
(+17 files in other folders)
