[metadata]
name = charm-swift-storage
summary = Charm module for OpenStack Swift Storage
description-file =
    README.md
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/charm-guide/latest/
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[nosetests]
verbosity=2
with-coverage=1
cover-erase=1
cover-package=actions.actions,lib,hooks.swift_storage_hooks

